--- a/d3/bar-chart.html
+++ b/d3/bar-chart.html
@@ -25,13 +25,13 @@
           .attr('class', 'bar-chart');
 
       // data voor in de barchart
-      var data = [80, 100, 56, 120, 180, 30, 40, 120, 160];
+      var dataset = [80, 100, 56, 120, 180, 30, 40, 120, 160];
 
       var barPadding = 5;
-      var barWidth = (svgWidth / data.length);
+      var barWidth = (svgWidth / dataset.length);
 
       var barChart = svg.selectAll('rect')
-          .data(data)
+          .data(dataset)
           .enter()
           .append('rect')
           //We need to give it four attributes: height, width, x-position and y-position.
@@ -49,7 +49,7 @@
           })
           //To make the bar stretch from this point and down to the bottom of the SVG container,
           //we’ll need to give it a height equivalent to the value of the data point:
-          .attr('width', function(d) {
+          .attr('height', function(d) {
             return d;
           })
           //The next step is to give it a width:
@@ -60,7 +60,7 @@
           //which is the total width of the container divided by the amount of bars.
           //In order to get a small gap between each of the bars, we’ll also subtract a padding,
           //which we’ve defined as 5.
-          .attr('height', barWidth - barPadding)
+          .attr('width', barWidth - barPadding)
           //The final step is to set the x-coordinates. This expression is a bit more complex:
 
           //Here, we’re first of all taking advantage of a second parameter in the callback, i. This is the index of the given item in the array.
