deleted one file

--- a/barchart5.html
+++ b/barchart5.html
@@ -57,12 +57,11 @@
     var xAxis = d3.axisBottom()
         .scale(x0)
         .tickSize(10)
-        //.orient("bottom")
 
     var yAxis = d3.axisLeft()
         .scale(y)
-        //.orient("left")
 
+    // colors of the bars
     var color = d3.scaleOrdinal()
         .range(["#ffb5f6","#ff4444","#89c8ff"])
 
