--- a/barchart5.html
+++ b/barchart5.html
@@ -34,6 +34,10 @@
       display: none;
     }
 
+    text {
+      display: block;
+    }
+
     </style>
     <body>
       <h3>Number of movies the OBA has had in their system of Disney, Pixar and Dreamworks throughout the years.</h3>
@@ -63,7 +67,7 @@
 
     // colors of the bars
     var color = d3.scaleOrdinal()
-        .range(["#ffb5f6","#ff4444","#89c8ff"])
+        .range(["#840000","#d61919","#ff4949"])
 
     var svg = d3.select("body").append("svg")
         .attr("width", width + margin.left + margin.right)
@@ -73,12 +77,12 @@
 
     d3.json("data.json").then(function(data) {
 
-      var categoriesNames = data.map(function(d) { return d.categorie })
-      var rateNames = data[0].values.map(function(d) { return d.rate })
+      var yearNames = data.map(function(d) { return d.year })
+      var companyNames = data[0].values.map(function(d) { return d.company })
 
-      x0.domain(categoriesNames)
-      x1.domain(rateNames).range([0, x0.bandwidth()])
-      y.domain([0, d3.max(data, function(categorie) { return d3.max(categorie.values, function(d) { return d.value }) })])
+      x0.domain(yearNames)
+      x1.domain(companyNames).range([0, x0.bandwidth()])
+      y.domain([0, d3.max(data, function(year) { return d3.max(year.values, function(d) { return d.value }) })])
 
       // text for the axis and the legend
       svg.append("g")
@@ -96,7 +100,9 @@
           .attr("dy", ".71em")
           .style("text-anchor", "end")
           .style("font-weight","bold")
-          .text("Value")
+          .style("opacity", "1")
+          .style("color", "#000000")
+          .text("Number of movies")
 
       svg.select(".y").transition().duration(500).delay(1300).style("opacity","1")
 
@@ -104,22 +110,22 @@
           .data(data)
           .enter().append("g")
           .attr("class", "g")
-          .attr("transform",function(d) { return "translate(" + x0(d.categorie) + ",0)" })
+          .attr("transform",function(d) { return "translate(" + x0(d.year) + ",0)" })
 
       //make the bars
       slice.selectAll("rect")
           .data(function(d) { return d.values })
       .enter().append("rect")
           .attr("width", x1.bandwidth())
-          .attr("x", function(d) { return x1(d.rate) })
-          .style("fill", function(d) { return color(d.rate) })
+          .attr("x", function(d) { return x1(d.company) })
+          .style("fill", function(d) { return color(d.company) })
           .attr("y", function(d) { return y(0) })
           .attr("height", function(d) { return height - y(0) })
           .on("mouseover", function(d) {
-              d3.select(this).style("fill", d3.rgb(color(d.rate)).darker(2))
+              d3.select(this).style("fill", d3.rgb(color(d.company)).darker(2))
           })
           .on("mouseout", function(d) {
-              d3.select(this).style("fill", color(d.rate))
+              d3.select(this).style("fill", color(d.company))
           })
 
       //animation
@@ -132,7 +138,7 @@
 
       // legenda
       var legend = svg.selectAll(".legend")
-          .data(data[0].values.map(function(d) { return d.rate }).reverse())
+          .data(data[0].values.map(function(d) { return d.company }).reverse())
       .enter().append("g")
           .attr("class", "legend")
           .attr("transform", function(d,i) { return "translate(0," + i * 20 + ")" })
